<resources>
    <string name="app_name">Lab_04</string>
    <string name="main_header">Empty Tasks.</string>
    <string name="sub_header">Add your first Tasks.</string>
    <string name="main_des">Welcome to Task Mate, your all-in-one solution for organizing and tracking tasks efficiently! This app is designed to help you stay on top of your daily activities, projects, and deadlines with ease. Whether you\'re managing personal to-dos, work assignments, or long-term goals, [App Name] simplifies task management by offering intuitive features that keep everything in order.</string>
    <string name="tasks">Tasks</string>
    <string name="total_tasks">Total Tasks</string>
    <string name="_0">0</string>
    <string name="upcoimg_tasks">Upcoimg Tasks</string>
    <string name="add_task">add task</string>
    <string name="next_page">Next Page</string>
    <string name="easily_organize_prioritize_and_keep_track_of_all_your_tasks_in_one_place_stay_productive_and_never_miss_a_deadline">Easily organize, prioritize, and keep track of all your tasks in one place. Stay productive and never miss a deadline.</string>
    <string name="add_task2">Add Task.</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="date">Date</string>
    <string name="task">Task</string>
    <string name="tasks1">Tasks.</string>
    <string name="todo">TODO</string>
    <string name="no_tasks_available">No tasks available</string>
    <string name="todo1">TODO</string>
    <string name="next_page1">Next Page</string>
    <string name="todo2">TODO</string>
    <string name="arrow">arrow</string>
    <string name="taskimg">taskimg</string>
    <string name="taskmate">TaskMate</string>
    <string name="manage_your_task">Manage Your task</string>
    <string name="logo">logo</string>
    <string name="onimg">onimg</string>
    <string name="date2">Date</string>
    <string name="end_time1">End Time</string>
    <string name="start_time1">Start Time</string>
    <string name="edit_the_description">Edit the description</string>
    <string name="edit_the_title">Edit the title</string>
    <string name="edit_task">Edit Task.</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="date3">Date</string>
    <string name="delete">delete</string>
</resources>