<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/Background_Color"
    app:cardCornerRadius="12dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="12dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundItem"
        android:orientation="vertical"
        android:padding="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/poppins"
                android:text="@string/title"
                android:textColor="@color/accentItem"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/updateButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="48dp"
                android:contentDescription="@string/edit_task"
                android:src="@drawable/baseline_edit_24" />

            <ImageView
                android:id="@+id/deleteButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/delete"
                android:src="@drawable/baseline_delete_24" />
        </RelativeLayout>

        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:maxLines="3"
            android:text="@string/content"
            android:textColor="@color/accentItem"
            android:textSize="16sp" />

        <!-- Custom Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/start"
                android:textColor="@color/accentItem"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/endTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/end"
                android:textColor="@color/accentItem"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/poppins"
            android:text="@string/date3"
            android:textColor="@color/accentItem"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
