<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background_Color"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/tasks"
            android:textColor="@color/Secondary_Button_Color"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/taskcontainer"
            android:orientation="horizontal"
            android:padding="16dp"
            android:id="@+id/ViewTasks">

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/task"
                app:srcCompat="@drawable/doc" />

            <TextView
                android:id="@+id/Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/total_tasks"
                android:textColor="@color/Primary_Color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/countTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/_0"
                android:textColor="@color/Primary_Color"
                android:textColorHint="@color/Accent_Color"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/upcoimg_tasks"
            android:textColor="@color/Secondary_Button_Color"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="30dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:backgroundTint="@color/Primary_Color"
            android:contentDescription="@string/add_task"
            android:src="@drawable/baseline_add_24"
            app:tint="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
