<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".UpdateTaskActivity">


    <TextView
        android:id="@+id/editNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/edit_task"
        android:textColor="@color/Secondary_Button_Color"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/updateTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints=""
        android:hint="@string/edit_the_title"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="20sp"
        android:layout_below="@id/editNoteHeading"
        android:background="@drawable/orange_boarder"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:fontFamily="@font/poppins"/>

    <EditText
        android:id="@+id/updateContentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateTitleEditText"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/orange_boarder"
        android:fontFamily="@font/poppins"
        android:gravity="top"
        android:hint="@string/edit_the_description"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="88dp"
        android:layout_below="@id/updateContentEditText"
        android:layout_marginTop="3dp">


        <TextView
            android:id="@+id/updateStartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="-150dp"
            android:text="@string/start_time1"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/Primary_Color"/>

        <TextView
            android:id="@+id/updateEndTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginBottom="-150dp"
            android:text="@string/end_time1"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/Primary_Color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_below="@id/updateContentEditText"
        >

        <TimePicker
            android:id="@+id/updateStartEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:timePickerMode="spinner"
            android:layout_gravity="center"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:layout_marginEnd="-30dp"
            android:layout_marginStart="-60dp"/>


        <TimePicker
            android:id="@+id/updateEndEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-0dp"
            android:layout_marginEnd="-50dp"
            android:layout_weight="1"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:timePickerMode="spinner" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateContentEditText"
        android:layout_marginTop="124dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/updateDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:fontFamily="@font/poppins"
            android:text="@string/date2"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/Primary_Color"/>

        <DatePicker
            android:id="@+id/updateDateEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-400dp"
            android:layout_marginEnd="-30dp"
            android:layout_weight="1"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:layout_marginTop="50dp"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="@color/Primary_Color"
        android:contentDescription="@string/add_task"
        android:src="@drawable/baseline_done_24"
        app:tint="@color/white" />




</RelativeLayout>



